--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,10 @@ spring:
         dbcp:
             validation-query: SELECT 1
             test-while-idle: true
+    h2:
+        console:
+            enabled: true
+            path: /h2-console
     jpa:
         hibernate:
             ddl-auto: create
